--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Spring Security Example</title>
+    <title>Main Page</title>
 </head>
 <body>
-<h1>Welcome to Index PAGE!</h1>
+
+<div class="container text-center">
+    <h1>Welcome to Main Page!</h1>
+    <h3><a th:href="@{/registration/register}">Register</a></h3>
+    <h3><a th:href="@{/login}">Login</a></h3>
+</div>
 
 
 </body>
