--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -5,6 +5,10 @@
     <title>User Registration Form</title>
 </head>
 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 <style>
     .error {
         color: red;
@@ -27,6 +31,11 @@
         <p th:if="${#fields.hasErrors('lastName')}" th:errorclass="error" th:errors="*{lastName}"></p>
     </div>
     <div>
+        <label for="age">Age</label><br>
+        <input type="number" th:field="*{age}">
+        <p th:if="${#fields.hasErrors('age')}" th:errorclass="error" th:errors="*{age}"></p>
+    </div>
+    <div>
         <label for="email">Email</label><br>
         <input type="email" placeholder="e.g. john_doe@mail.com" th:field="*{email}">
         <p th:if="${#fields.hasErrors('email')}" th:errorclass="error" th:errors="*{email}"></p>
@@ -36,17 +45,6 @@
         <input type="password" th:field="*{password}">
         <p th:if="${#fields.hasErrors('password')}" th:errorclass="error" th:errors="*{password}"></p>
     </div>
-<!--    <div>-->
-<!--        <label>Roles:-->
-<!--            <input type="checkbox" name="roles"-->
-<!--                   th:each="role : ${allRoles}"-->
-<!--                   th:text="${role.role}"-->
-<!--                   th:value="${role.id}"-->
-<!--                   th:field="*{roles}"-->
-<!--            />-->
-<!--        </label>-->
-<!--        <p th:if="${#fields.hasErrors('roles')}" th:errorclass="error" th:errors="*{roles}"></p>-->
-<!--    </div>-->
     <br>
     <button type="submit">Register</button>
 </form>
