--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -3,56 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <title>User Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
-<style>
-    table {
-        font-family: arial, sans-serif;
-        border-collapse: collapse;
-        width: 100%;
-    }
-
-    td, th {
-        border: 1px solid #000;
-        text-align: left;
-        padding: 8px;
-    }
-
-    tr:nth-child(even) {
-        background-color: #dddddd;
-    }
-
-    .error {
-        color: red;
-    }
-</style>
 <body>
+<nav class="navbar navbar-dark bg-dark" style="font-size: small">
+    <div class="container-fluid">
+        <span class="navbar-brand" style="font-size: small" th:text="${userDetails.username} + ' with roles ' + ${userDetails.roles}"></span>
+        <a class="nav-link" th:href="@{/logout}">Logout</a>
+    </div>
+</nav>
 
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Logout" />
-</form><br>
+<div class="container-fluid" style="height: 90vh">
+    <div class="row h-100">
+        <div class="col-2 p-0">
+            <table class="table table-hover border-0">
+                <tbody>
+                <tr>
+                    <td class="border-0 text-center">
+                        <a class="nav-link" th:href="@{/admin}">Admin</a>
+                    </td>
+                </tr>
+                <tr class="table-primary border-0">
+                    <td class="border-0 text-center">
+                        <a class="nav-link" th:href="@{/user}">User</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="col-10 bg-light p-0">
+            <div class="container">
+                <div class="row">
+                    <h3 class="m-1">User Information Page</h3>
+                </div>
+                    <div class="row border fw-bold bg-light p-3 mx-1">About User</div>
+                    <div class="row border bg-white mx-1">
+                        <div class="table-responsive">
+                            <table class="table table-striped table-hover">
+                                <thead class="table-white">
+                                <tr>
+                                    <th>Id</th>
+                                    <th>First Name</th>
+                                    <th>Last Name</th>
+                                    <th>Age</th>
+                                    <th>Email</th>
+                                    <th>Role</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td th:text="${userDetails.id}"></td>
+                                        <td th:text="${userDetails.firstName}"></td>
+                                        <td th:text="${userDetails.lastName}"></td>
+                                        <td th:text="${userDetails.age}"></td>
+                                        <td th:text="${userDetails.email}"></td>
+                                        <td th:text="${userDetails.roles}"></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
 
-<h1>User Info</h1>
+                    </div>
+                </div>
 
-<table class="table table-bordered table-striped">
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Email</th>
-        <th>Roles</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td th:text="${user.id}"></td>
-        <td th:text="${user.firstName}"></td>
-        <td th:text="${user.lastName}"></td>
-        <td th:text="${user.email}"></td>
-        <td th:text="${user.roles}"></td>
-    </tr>
-    </tbody>
-</table>
-
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
