--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -19,7 +19,7 @@
         <div class="col-2 p-0">
             <table class="table table-hover border-0">
                 <tbody>
-                <tr>
+                <tr th:if="${role_admin}" >
                     <td class="border-0 text-center">
                         <a class="nav-link" th:href="@{/admin}">Admin</a>
                     </td>
